--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -5,7 +5,7 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
-    "test2": {
+    "mys3test": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
